# clockit

./: .dockerignore  .env.dev  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  BUILD_FROM_WSL.md  BUILD_WINDOWS_EXE.bat  CI_STATUS.md  COMPILATION_SUCCESS.md  DEPLOYMENT.md  DEPLOYMENT_DATABASE.md  DEPLOYMENT_EC2.md  DEVELOPMENT.md  DISTRIBUTION_README.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  EXISTING_USERS_ONBOARDING.md  LEARNING_GUIDE.md  PLANNER_SETUP.md  README.md  README_Windows.md  SECURITY_AUDIT_README.md  SECURITY_AUDIT_REPORT.md  SECURITY_AUDIT_SUMMARY.txt  SECURITY_CHECKLIST.md  SECURITY_EXECUTIVE_SUMMARY.md  SECURITY_FIXES_SUMMARY.md  SECURITY_IMPLEMENTATION_GUIDE.md  SECURITY_QUICK_START.md  SECURITY_RECOMMENDATIONS.md  TESTING.md  TODO  WINDOWS_BUILD_GUIDE.md  WINDOWS_PYTHON_SETUP.md  build.py  build_all.py  build_windows.bat  build_wsl_to_windows.sh  (+21 more)
clockit_data/: tasks_data.json
electron/: README.md  main.js  package-lock.json  package.json  preload.js
k8s/: README.md  deployment.yaml  ingress.yaml  pvc.yaml  secrets.yaml  service.yaml
marketing/: README.md  assets.md  facebook-posts.md  linkedin-posts.md  social-media-content.md  social-media-toolkit.md  visual-assets-guide.md
migrations/: update_time_precision.sql
react-frontend/: README.md  TESTING.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.js  vite.config.js
scripts/: generate-secrets.sh  generate_secrets.py  init_database.py  migrate_category_structure.py  migrate_onboarding.py  remove-console-logging.sh  setup_postgres.sh  start_backend.sh  (+2 more)
src/: main.py  (+8 more)
(+93 files in other folders)
