[tool.poetry]
name = "clockit"
version = "0.0.0"
description = "ClockIt - Professional Time Tracker"
authors = ["JollyGreenFrogs <devnull@example.com>"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
